--- a/Table.html
+++ b/Table.html
@@ -46,6 +46,7 @@
              <td style="background-color: black">33</td>
              <td style="background-color: gray">36</td>
              <td colspan="" style="text-align: center;">2to1</td>
+             <td colspan="" style="text-align: center;">2to1</td>
                 </tr>
                 <tr>
                     <td style="background-color: black">2</td>
