--- a/Table.html
+++ b/Table.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <Head>
+    <head>
         <title>Table</title>
-    </Head>
+    </head>
         <style>
             table, tr, th, td
             {
-                border: 4px solid white;
+                border: 3px solid white;
                 border-collapse: collapse;
                 margin: auto;
                 padding-top: 15px;
@@ -36,7 +36,7 @@
              <td style="background-color: gray">3</td>
              <td style="background-color: black">6</td>
              <td style="background-color: gray">9</td>
-             <td style="background-color: gray; width: 50px; text-align: center;" >12</td>
+             <td style="background-color:gray; width: 50px;text-align: center;">12</td>
              <td style="background-color: black">15</td>
              <td style="background-color: gray">18</td>
              <td style="background-color: gray">21</td>
@@ -45,8 +45,7 @@
              <td style="background-color: gray">30</td>
              <td style="background-color: black">33</td>
              <td style="background-color: gray">36</td>
-             <td colspan="" style="text-align: center;">2to1</td>
-             <td colspan="" style="text-align: center;">2to1</td>
+             <td style="text-align: center;">2to1</td>
                 </tr>
                 <tr>
                     <td style="background-color: black">2</td>
@@ -76,21 +75,21 @@
                         <td style="background-color: black">28</td>
                         <td style="background-color: black">31</td>
                         <td style="background-color: gray">34</td>
-                        <td style="text-align: center;">2to1</td>
+                        <td style="text-align: right: inheritl;">2to1</td>
                     </tr>
                     <tr>
-                        <td colspan="5" style="text-align: center">1st12</td>
-                        <td colspan="5" style="text-align: center">2nd12</td>
-                        <td colspan="5"style="text-align:center;">3rd12</td>
-                        <!-- <td rowspan="3"></td> -->
+                        <td colspan="4" style="text-align: center;">1st12</td>
+                        <td colspan="4" style="text-align: center;">2nd12</td>
+                        <td colspan="4"style="text-align:  center;">3rd12</td>
                     </tr>
                     <tr>
-                        <td colspan="3" style="text-align:center;">1to18</td>
-                        <td colspan="3" style="text-align: center;">Even</td>
-                        <td colspan="3" style="background-color: gray"></td>
-                        <td colspan="3" style="background-color: black"></td>
-                        <td colspan="3"style="text-align: center;">ood</td>
-                        <td colspan="3" style="text-align: center;">19to36</td>
+                        <td colspan="2" style="text-align:center;">1to18</td>
+                        <td colspan="2" style="text-align: center;">Even</td>
+                        <td colspan="2" style="background-color: gray"></td>
+                        <td colspan="2" style="background-color: black"></td>
+                        <td colspan="2"style="text-align: center;">ood</td>
+                        <td colspan="2" style="text-align: center;">19to36</td>
+                        <td rowspan="6"></td>
                     </tr>
             </table>
         </Body>
