--- a/Registarion Form.html
+++ b/Registarion Form.html
@@ -6,7 +6,7 @@
         </head>
         <body>
             <div class="div1">Individual Registration</div><br>
-            <div class="div5"><span style="color: red">User Perticular</span>
+            <div class="div5"><span style="color: red">User Perticular</span></div>
             <div class="div2">
             <label for="login Di"><span style="color: red;">*</span>Login id</label>
             <input type="text"id=""name=""required placeholder="Enter login id"><br><br>
@@ -17,8 +17,10 @@
             <label for="Confirm Password"><span style="color:red;">*</span>Confirm Password</label>
             <input type="password" id=""required placeholder="Confirm Password"><br><br>
             </div>
-            <div class="div6"><span style="color: red;">Porsonal Particular</span><br><br>
-            <div class="f"><label for="saluation"><span style="color: red;">*</span>salutation:</label>
+            <div class="div6"><span style="color: red;">Porsonal Particular</span></div><br><br>
+<div class="Main">
+    <div class="S">
+                <label for="saluation"><span style="color: red;">*</span>salutation:</label>
                    <select name="salutation" id="salutation">
                     <option value="select">--select--</option>
                             <!-- <option value="web devlopment">Web Devlopment</option>
@@ -31,9 +33,10 @@
                         <label for="Middle Name"><span style="color: red;">*</span>Middle Name</label>
                         <input type="text" name="" id=""required placeholder="Enter Middle Name"><br><br>
                         <label for="Last Name"><span style="color: red;">*</span>Last Name</label>
-                        <input type="text"name=""id=""required placeholder="Enter Last Name"><br><br>
-                        <div class="resident">
-                            <label for="resident";style><span style="color: red;">*</span>Residential Status</label>
+                        <input type="text"name=""id=""required placeholder="Enter Last Name">
+    </div><br><br>
+<div class="R">
+                            <label for="resident"><span style="color: red;">*</span>Residential Status</label>
                         <select name="Residential" id="Residential">
                             <option value="select">--select--</option>
                             <option value="Individual">Individual</option>
@@ -61,11 +64,13 @@
                         
                             <span style="color: red;">*</span>Email</label>
                         <input type="Email" name="" id=""placeholder="Email id">
-                    <br><br>
+                       <br><br>
                         <label for="Mobile Numnber"><span style="color: red;">*</span>Mobile Numnber</label>
-                        <input type="number"name="" id=""required placeholder="Enter phone Number"><br>
+                        <input type="number"name="" id=""required placeholder="Enter phone Number">
+                    </div>
+                    </div><br><br><br><br><br><br><br><br><br>  
 
-                <div class="div7"><Span style="color: red;">Account Perticular</Span></div><br>
+                 <div class="div7"><Span style="color: red;">Account Perticular</Span></div><br>
                  <div class="div10">
                     <label for="Account number"><span style="color: red;">*</span>15 digit account number</label>
                     <input type="Number" id="" name="" required placeholder="Enert Your account details"><br><br>
@@ -80,11 +85,11 @@
                         </select>
                     </div><br>
                     <div class="div8"><span style="color: red;">Declaration</span></div>
-                    <p class="P1">
+                    <p>
                         “I, _______ (candidate's name), declare that all the information submitted by me in the application form is correct, true and valid. I will present the supporting documents as and when required.” Please note that there should be no change in this text.
 
                     </p>    
-                    <button>Submit</button>
+                    <button style="size: 20000px;">Submit</button>
                     <Button>Reset</Button>
                  </body>
                  </html>
