--- a/Registarion Form.html
+++ b/Registarion Form.html
@@ -89,7 +89,7 @@
                         “I, _______ (candidate's name), declare that all the information submitted by me in the application form is correct, true and valid. I will present the supporting documents as and when required.” Please note that there should be no change in this text.
 
                     </p>    
-                    <button style="size: 20000px;">Submit</button>
+                    <button>Submit</button>
                     <Button>Reset</Button>
                  </body>
                  </html>
