--- a/Module 2/Table.html
+++ b/Module 2/Table.html
@@ -75,7 +75,7 @@
                         <td style="background-color: black">28</td>
                         <td style="background-color: black">31</td>
                         <td style="background-color: gray">34</td>
-                        <td style="text-align: right: inheritl;">2to1</td>
+                        <td rowspan="2" style="text-align: right: inheritl;">2to1</td>
                     </tr>
                     <tr>
                         <td colspan="4" style="text-align: center;">1st12</td>
